--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.0",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
