--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "remove-accents": "^0.5.0",
     "slugify": "^1.6.6",
     "tailwindcss": "^4.0.17",
     "yup": "^1.6.1"
