--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.1.3",
+    "@mantine/core": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
+    "@mantine/rte": "^5.10.5",
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0-beta.4",
     "react-router-dom": "^7.4.0",
     "remove-accents": "^0.5.0",
     "slugify": "^1.6.6",
@@ -38,6 +42,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.5"
   }
 }
